--- a/doc_template/examples_root/examples/nb/brain_observatory_monitor.ipynb
+++ b/doc_template/examples_root/examples/nb/brain_observatory_monitor.ipynb
@@ -5,10 +5,10 @@
    "id": "393c2a39",
    "metadata": {
     "papermill": {
-     "duration": 0.004182,
-     "end_time": "2023-01-24T18:24:54.259247",
+     "duration": 0.005206,
+     "end_time": "2023-01-25T20:38:42.305485",
      "exception": false,
-     "start_time": "2023-01-24T18:24:54.255065",
+     "start_time": "2023-01-25T20:38:42.300279",
      "status": "completed"
     },
     "tags": []
@@ -24,16 +24,16 @@
    "id": "0770199a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T18:24:54.267879Z",
-     "iopub.status.busy": "2023-01-24T18:24:54.267219Z",
-     "iopub.status.idle": "2023-01-24T18:24:54.274767Z",
-     "shell.execute_reply": "2023-01-24T18:24:54.274103Z"
+     "iopub.execute_input": "2023-01-25T20:38:42.320508Z",
+     "iopub.status.busy": "2023-01-25T20:38:42.320166Z",
+     "iopub.status.idle": "2023-01-25T20:38:42.329696Z",
+     "shell.execute_reply": "2023-01-25T20:38:42.328859Z"
     },
     "papermill": {
-     "duration": 0.013485,
-     "end_time": "2023-01-24T18:24:54.276267",
+     "duration": 0.019553,
+     "end_time": "2023-01-25T20:38:42.331949",
      "exception": false,
-     "start_time": "2023-01-24T18:24:54.262782",
+     "start_time": "2023-01-25T20:38:42.312396",
      "status": "completed"
     },
     "tags": []
@@ -49,16 +49,16 @@
    "id": "96b7108f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T18:24:54.283970Z",
-     "iopub.status.busy": "2023-01-24T18:24:54.283417Z",
-     "iopub.status.idle": "2023-01-24T18:24:54.286575Z",
-     "shell.execute_reply": "2023-01-24T18:24:54.285957Z"
+     "iopub.execute_input": "2023-01-25T20:38:42.343211Z",
+     "iopub.status.busy": "2023-01-25T20:38:42.342415Z",
+     "iopub.status.idle": "2023-01-25T20:38:42.346911Z",
+     "shell.execute_reply": "2023-01-25T20:38:42.345992Z"
     },
     "papermill": {
-     "duration": 0.008529,
-     "end_time": "2023-01-24T18:24:54.288029",
+     "duration": 0.011404,
+     "end_time": "2023-01-25T20:38:42.348832",
      "exception": false,
-     "start_time": "2023-01-24T18:24:54.279500",
+     "start_time": "2023-01-25T20:38:42.337428",
      "status": "completed"
     },
     "tags": [
@@ -77,16 +77,16 @@
    "metadata": {
     "collapsed": true,
     "execution": {
-     "iopub.execute_input": "2023-01-24T18:24:54.307702Z",
-     "iopub.status.busy": "2023-01-24T18:24:54.307094Z",
-     "iopub.status.idle": "2023-01-24T18:24:57.152924Z",
-     "shell.execute_reply": "2023-01-24T18:24:57.152253Z"
+     "iopub.execute_input": "2023-01-25T20:38:42.378572Z",
+     "iopub.status.busy": "2023-01-25T20:38:42.377459Z",
+     "iopub.status.idle": "2023-01-25T20:38:46.672665Z",
+     "shell.execute_reply": "2023-01-25T20:38:46.671476Z"
     },
     "papermill": {
-     "duration": 2.851906,
-     "end_time": "2023-01-24T18:24:57.154966",
+     "duration": 4.303421,
+     "end_time": "2023-01-25T20:38:46.675076",
      "exception": false,
-     "start_time": "2023-01-24T18:24:54.303060",
+     "start_time": "2023-01-25T20:38:42.371655",
      "status": "completed"
     },
     "tags": []
@@ -109,10 +109,10 @@
    "id": "0c5a54a3",
    "metadata": {
     "papermill": {
-     "duration": 0.003573,
-     "end_time": "2023-01-24T18:24:57.162149",
+     "duration": 0.004247,
+     "end_time": "2023-01-25T20:38:46.683978",
      "exception": false,
-     "start_time": "2023-01-24T18:24:57.158576",
+     "start_time": "2023-01-25T20:38:46.679731",
      "status": "completed"
     },
     "tags": []
@@ -127,16 +127,16 @@
    "id": "1d80b72a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T18:24:57.170221Z",
-     "iopub.status.busy": "2023-01-24T18:24:57.169636Z",
-     "iopub.status.idle": "2023-01-24T18:25:15.786591Z",
-     "shell.execute_reply": "2023-01-24T18:25:15.786004Z"
+     "iopub.execute_input": "2023-01-25T20:38:46.693989Z",
+     "iopub.status.busy": "2023-01-25T20:38:46.693434Z",
+     "iopub.status.idle": "2023-01-25T20:39:00.309359Z",
+     "shell.execute_reply": "2023-01-25T20:39:00.308462Z"
     },
     "papermill": {
-     "duration": 18.622611,
-     "end_time": "2023-01-24T18:25:15.788050",
+     "duration": 13.623158,
+     "end_time": "2023-01-25T20:39:00.311253",
      "exception": false,
-     "start_time": "2023-01-24T18:24:57.165439",
+     "start_time": "2023-01-25T20:38:46.688095",
      "status": "completed"
     },
     "tags": []
@@ -146,7 +146,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-24 18:24:57,288 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/528017428\n"
+      "2023-01-25 20:38:46,772 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/528017428\n"
      ]
     },
     {
@@ -248,10 +248,10 @@
    "id": "615603f0",
    "metadata": {
     "papermill": {
-     "duration": 0.003569,
-     "end_time": "2023-01-24T18:25:15.795605",
+     "duration": 0.004114,
+     "end_time": "2023-01-25T20:39:00.320725",
      "exception": false,
-     "start_time": "2023-01-24T18:25:15.792036",
+     "start_time": "2023-01-25T20:39:00.316611",
      "status": "completed"
     },
     "tags": []
@@ -266,16 +266,16 @@
    "id": "b84d9a20",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T18:25:15.804207Z",
-     "iopub.status.busy": "2023-01-24T18:25:15.803468Z",
-     "iopub.status.idle": "2023-01-24T18:25:16.152444Z",
-     "shell.execute_reply": "2023-01-24T18:25:16.151736Z"
+     "iopub.execute_input": "2023-01-25T20:39:00.330260Z",
+     "iopub.status.busy": "2023-01-25T20:39:00.329574Z",
+     "iopub.status.idle": "2023-01-25T20:39:00.823916Z",
+     "shell.execute_reply": "2023-01-25T20:39:00.822981Z"
     },
     "papermill": {
-     "duration": 0.355069,
-     "end_time": "2023-01-24T18:25:16.154201",
+     "duration": 0.501447,
+     "end_time": "2023-01-25T20:39:00.826259",
      "exception": false,
-     "start_time": "2023-01-24T18:25:15.799132",
+     "start_time": "2023-01-25T20:39:00.324812",
      "status": "completed"
     },
     "tags": []
@@ -307,10 +307,10 @@
    "id": "642c4135",
    "metadata": {
     "papermill": {
-     "duration": 0.004054,
-     "end_time": "2023-01-24T18:25:16.162625",
+     "duration": 0.004807,
+     "end_time": "2023-01-25T20:39:00.836137",
      "exception": false,
-     "start_time": "2023-01-24T18:25:16.158571",
+     "start_time": "2023-01-25T20:39:00.831330",
      "status": "completed"
     },
     "tags": []
@@ -325,16 +325,16 @@
    "id": "a44cc00c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T18:25:16.171337Z",
-     "iopub.status.busy": "2023-01-24T18:25:16.170812Z",
-     "iopub.status.idle": "2023-01-24T18:25:16.369613Z",
-     "shell.execute_reply": "2023-01-24T18:25:16.368930Z"
+     "iopub.execute_input": "2023-01-25T20:39:00.846945Z",
+     "iopub.status.busy": "2023-01-25T20:39:00.846567Z",
+     "iopub.status.idle": "2023-01-25T20:39:01.173713Z",
+     "shell.execute_reply": "2023-01-25T20:39:01.172832Z"
     },
     "papermill": {
-     "duration": 0.205677,
-     "end_time": "2023-01-24T18:25:16.371987",
+     "duration": 0.33551,
+     "end_time": "2023-01-25T20:39:01.176269",
      "exception": false,
-     "start_time": "2023-01-24T18:25:16.166310",
+     "start_time": "2023-01-25T20:39:00.840759",
      "status": "completed"
     },
     "tags": []
@@ -360,10 +360,10 @@
    "id": "92555290",
    "metadata": {
     "papermill": {
-     "duration": 0.00412,
-     "end_time": "2023-01-24T18:25:16.380223",
+     "duration": 0.00444,
+     "end_time": "2023-01-25T20:39:01.186321",
      "exception": false,
-     "start_time": "2023-01-24T18:25:16.376103",
+     "start_time": "2023-01-25T20:39:01.181881",
      "status": "completed"
     },
     "tags": []
@@ -378,16 +378,16 @@
    "id": "ffe96a0c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T18:25:16.388880Z",
-     "iopub.status.busy": "2023-01-24T18:25:16.388640Z",
-     "iopub.status.idle": "2023-01-24T18:25:17.908198Z",
-     "shell.execute_reply": "2023-01-24T18:25:17.907552Z"
+     "iopub.execute_input": "2023-01-25T20:39:01.203485Z",
+     "iopub.status.busy": "2023-01-25T20:39:01.203001Z",
+     "iopub.status.idle": "2023-01-25T20:39:03.285533Z",
+     "shell.execute_reply": "2023-01-25T20:39:03.283531Z"
     },
     "papermill": {
-     "duration": 1.569284,
-     "end_time": "2023-01-24T18:25:17.953299",
+     "duration": 2.093317,
+     "end_time": "2023-01-25T20:39:03.287672",
      "exception": false,
-     "start_time": "2023-01-24T18:25:16.384015",
+     "start_time": "2023-01-25T20:39:01.194355",
      "status": "completed"
     },
     "tags": []
@@ -415,10 +415,10 @@
    "id": "63d4282d",
    "metadata": {
     "papermill": {
-     "duration": 0.008566,
-     "end_time": "2023-01-24T18:25:18.109486",
+     "duration": 0.004945,
+     "end_time": "2023-01-25T20:39:03.300084",
      "exception": false,
-     "start_time": "2023-01-24T18:25:18.100920",
+     "start_time": "2023-01-25T20:39:03.295139",
      "status": "completed"
     },
     "tags": []
@@ -433,16 +433,16 @@
    "id": "00053c56",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T18:25:18.159135Z",
-     "iopub.status.busy": "2023-01-24T18:25:18.158396Z",
-     "iopub.status.idle": "2023-01-24T18:25:21.324601Z",
-     "shell.execute_reply": "2023-01-24T18:25:21.323996Z"
+     "iopub.execute_input": "2023-01-25T20:39:03.311343Z",
+     "iopub.status.busy": "2023-01-25T20:39:03.310744Z",
+     "iopub.status.idle": "2023-01-25T20:39:08.223761Z",
+     "shell.execute_reply": "2023-01-25T20:39:08.222814Z"
     },
     "papermill": {
-     "duration": 3.174325,
-     "end_time": "2023-01-24T18:25:21.326188",
+     "duration": 4.92098,
+     "end_time": "2023-01-25T20:39:08.225937",
      "exception": false,
-     "start_time": "2023-01-24T18:25:18.151863",
+     "start_time": "2023-01-25T20:39:03.304957",
      "status": "completed"
     },
     "tags": []
@@ -470,10 +470,10 @@
    "id": "aaaea49f",
    "metadata": {
     "papermill": {
-     "duration": 0.004262,
-     "end_time": "2023-01-24T18:25:21.335331",
+     "duration": 0.005713,
+     "end_time": "2023-01-25T20:39:08.238690",
      "exception": false,
-     "start_time": "2023-01-24T18:25:21.331069",
+     "start_time": "2023-01-25T20:39:08.232977",
      "status": "completed"
     },
     "tags": []
@@ -488,16 +488,16 @@
    "id": "5a22dfea",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T18:25:21.345290Z",
-     "iopub.status.busy": "2023-01-24T18:25:21.345035Z",
-     "iopub.status.idle": "2023-01-24T18:25:28.757198Z",
-     "shell.execute_reply": "2023-01-24T18:25:28.756467Z"
+     "iopub.execute_input": "2023-01-25T20:39:08.249816Z",
+     "iopub.status.busy": "2023-01-25T20:39:08.249544Z",
+     "iopub.status.idle": "2023-01-25T20:39:19.833670Z",
+     "shell.execute_reply": "2023-01-25T20:39:19.832624Z"
     },
     "papermill": {
-     "duration": 7.421072,
-     "end_time": "2023-01-24T18:25:28.760780",
+     "duration": 11.597454,
+     "end_time": "2023-01-25T20:39:19.840847",
      "exception": false,
-     "start_time": "2023-01-24T18:25:21.339708",
+     "start_time": "2023-01-25T20:39:08.243393",
      "status": "completed"
     },
     "tags": []
@@ -570,10 +570,10 @@
    "id": "264b6f1d",
    "metadata": {
     "papermill": {
-     "duration": 0.005947,
-     "end_time": "2023-01-24T18:25:28.772752",
+     "duration": 0.005833,
+     "end_time": "2023-01-25T20:39:19.853643",
      "exception": false,
-     "start_time": "2023-01-24T18:25:28.766805",
+     "start_time": "2023-01-25T20:39:19.847810",
      "status": "completed"
     },
     "tags": []
@@ -587,10 +587,10 @@
    "id": "dfaab4e6",
    "metadata": {
     "papermill": {
-     "duration": 0.005716,
-     "end_time": "2023-01-24T18:25:28.784081",
+     "duration": 0.006233,
+     "end_time": "2023-01-25T20:39:19.866079",
      "exception": false,
-     "start_time": "2023-01-24T18:25:28.778365",
+     "start_time": "2023-01-25T20:39:19.859846",
      "status": "completed"
     },
     "tags": []
@@ -605,16 +605,16 @@
    "id": "50ef0982",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T18:25:28.796579Z",
-     "iopub.status.busy": "2023-01-24T18:25:28.796315Z",
-     "iopub.status.idle": "2023-01-24T18:25:32.996020Z",
-     "shell.execute_reply": "2023-01-24T18:25:32.995450Z"
+     "iopub.execute_input": "2023-01-25T20:39:19.881137Z",
+     "iopub.status.busy": "2023-01-25T20:39:19.880183Z",
+     "iopub.status.idle": "2023-01-25T20:39:26.484707Z",
+     "shell.execute_reply": "2023-01-25T20:39:26.483589Z"
     },
     "papermill": {
-     "duration": 4.208037,
-     "end_time": "2023-01-24T18:25:32.997743",
+     "duration": 6.61822,
+     "end_time": "2023-01-25T20:39:26.490902",
      "exception": false,
-     "start_time": "2023-01-24T18:25:28.789706",
+     "start_time": "2023-01-25T20:39:19.872682",
      "status": "completed"
     },
     "tags": []
@@ -680,17 +680,17 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 40.431623,
-   "end_time": "2023-01-24T18:25:33.423835",
+   "duration": 46.474888,
+   "end_time": "2023-01-25T20:39:27.221381",
    "environment_variables": {},
    "exception": null,
    "input_path": "doc_template/examples_root/examples/nb/brain_observatory_monitor.ipynb",
-   "output_path": "/tmp/tmpavbovw1p/scratch_nb.ipynb",
+   "output_path": "/tmp/tmpazxd6x4d/scratch_nb.ipynb",
    "parameters": {
-    "output_dir": "/tmp/tmpavbovw1p",
+    "output_dir": "/tmp/tmpazxd6x4d",
     "resources_dir": "/home/runner/work/AllenSDK/AllenSDK/allensdk/internal/notebooks/resources"
    },
-   "start_time": "2023-01-24T18:24:52.992212",
+   "start_time": "2023-01-25T20:38:40.746493",
    "version": "2.4.0"
   }
  },
