--- a/doc_template/examples_root/examples/nb/brain_observatory_stimuli.ipynb
+++ b/doc_template/examples_root/examples/nb/brain_observatory_stimuli.ipynb
@@ -5,10 +5,10 @@
    "id": "0698dc8f",
    "metadata": {
     "papermill": {
-     "duration": 0.004682,
-     "end_time": "2023-01-24T18:00:05.568954",
+     "duration": 0.00687,
+     "end_time": "2023-01-25T20:13:58.718959",
      "exception": false,
-     "start_time": "2023-01-24T18:00:05.564272",
+     "start_time": "2023-01-25T20:13:58.712089",
      "status": "completed"
     },
     "tags": []
@@ -26,16 +26,16 @@
    "id": "5a52e7ef",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T18:00:05.577981Z",
-     "iopub.status.busy": "2023-01-24T18:00:05.577262Z",
-     "iopub.status.idle": "2023-01-24T18:00:05.585829Z",
-     "shell.execute_reply": "2023-01-24T18:00:05.585231Z"
+     "iopub.execute_input": "2023-01-25T20:13:58.731721Z",
+     "iopub.status.busy": "2023-01-25T20:13:58.730263Z",
+     "iopub.status.idle": "2023-01-25T20:13:58.741143Z",
+     "shell.execute_reply": "2023-01-25T20:13:58.739697Z"
     },
     "papermill": {
-     "duration": 0.01497,
-     "end_time": "2023-01-24T18:00:05.587751",
+     "duration": 0.01907,
+     "end_time": "2023-01-25T20:13:58.743265",
      "exception": false,
-     "start_time": "2023-01-24T18:00:05.572781",
+     "start_time": "2023-01-25T20:13:58.724195",
      "status": "completed"
     },
     "tags": []
@@ -51,16 +51,16 @@
    "id": "1138f1cb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T18:00:05.595888Z",
-     "iopub.status.busy": "2023-01-24T18:00:05.595439Z",
-     "iopub.status.idle": "2023-01-24T18:00:05.598563Z",
-     "shell.execute_reply": "2023-01-24T18:00:05.597915Z"
+     "iopub.execute_input": "2023-01-25T20:13:58.754249Z",
+     "iopub.status.busy": "2023-01-25T20:13:58.753611Z",
+     "iopub.status.idle": "2023-01-25T20:13:58.758084Z",
+     "shell.execute_reply": "2023-01-25T20:13:58.757146Z"
     },
     "papermill": {
-     "duration": 0.008782,
-     "end_time": "2023-01-24T18:00:05.599994",
+     "duration": 0.0123,
+     "end_time": "2023-01-25T20:13:58.760111",
      "exception": false,
-     "start_time": "2023-01-24T18:00:05.591212",
+     "start_time": "2023-01-25T20:13:58.747811",
      "status": "completed"
     },
     "tags": [
@@ -78,16 +78,16 @@
    "id": "be1c0a7f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T18:00:05.620429Z",
-     "iopub.status.busy": "2023-01-24T18:00:05.619880Z",
-     "iopub.status.idle": "2023-01-24T18:00:05.893025Z",
-     "shell.execute_reply": "2023-01-24T18:00:05.892370Z"
+     "iopub.execute_input": "2023-01-25T20:13:58.788315Z",
+     "iopub.status.busy": "2023-01-25T20:13:58.787601Z",
+     "iopub.status.idle": "2023-01-25T20:13:59.164625Z",
+     "shell.execute_reply": "2023-01-25T20:13:59.163343Z"
     },
     "papermill": {
-     "duration": 0.279495,
-     "end_time": "2023-01-24T18:00:05.895241",
+     "duration": 0.385424,
+     "end_time": "2023-01-25T20:13:59.167542",
      "exception": false,
-     "start_time": "2023-01-24T18:00:05.615746",
+     "start_time": "2023-01-25T20:13:58.782118",
      "status": "completed"
     },
     "tags": []
@@ -120,10 +120,10 @@
    "id": "57a3dd75",
    "metadata": {
     "papermill": {
-     "duration": 0.003523,
-     "end_time": "2023-01-24T18:00:05.902604",
+     "duration": 0.004993,
+     "end_time": "2023-01-25T20:13:59.178215",
      "exception": false,
-     "start_time": "2023-01-24T18:00:05.899081",
+     "start_time": "2023-01-25T20:13:59.173222",
      "status": "completed"
     },
     "tags": []
@@ -139,16 +139,16 @@
    "id": "86d015a4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T18:00:05.911382Z",
-     "iopub.status.busy": "2023-01-24T18:00:05.910660Z",
-     "iopub.status.idle": "2023-01-24T18:00:32.927980Z",
-     "shell.execute_reply": "2023-01-24T18:00:32.927327Z"
+     "iopub.execute_input": "2023-01-25T20:13:59.189611Z",
+     "iopub.status.busy": "2023-01-25T20:13:59.188600Z",
+     "iopub.status.idle": "2023-01-25T20:14:16.886410Z",
+     "shell.execute_reply": "2023-01-25T20:14:16.885026Z"
     },
     "papermill": {
-     "duration": 27.023518,
-     "end_time": "2023-01-24T18:00:32.929590",
+     "duration": 17.706127,
+     "end_time": "2023-01-25T20:14:16.888729",
      "exception": false,
-     "start_time": "2023-01-24T18:00:05.906072",
+     "start_time": "2023-01-25T20:13:59.182602",
      "status": "completed"
     },
     "tags": []
@@ -158,7 +158,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-24 18:00:07,963 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/514340576\n"
+      "2023-01-25 20:14:02,066 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/514340576\n"
      ]
     },
     {
@@ -193,10 +193,10 @@
    "id": "abc48527",
    "metadata": {
     "papermill": {
-     "duration": 0.00422,
-     "end_time": "2023-01-24T18:00:32.937971",
+     "duration": 0.004801,
+     "end_time": "2023-01-25T20:14:16.900281",
      "exception": false,
-     "start_time": "2023-01-24T18:00:32.933751",
+     "start_time": "2023-01-25T20:14:16.895480",
      "status": "completed"
     },
     "tags": []
@@ -212,16 +212,16 @@
    "id": "5c8b0144",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T18:00:32.947117Z",
-     "iopub.status.busy": "2023-01-24T18:00:32.946498Z",
-     "iopub.status.idle": "2023-01-24T18:00:59.094473Z",
-     "shell.execute_reply": "2023-01-24T18:00:59.093407Z"
+     "iopub.execute_input": "2023-01-25T20:14:16.911415Z",
+     "iopub.status.busy": "2023-01-25T20:14:16.911103Z",
+     "iopub.status.idle": "2023-01-25T20:14:31.576850Z",
+     "shell.execute_reply": "2023-01-25T20:14:31.575421Z"
     },
     "papermill": {
-     "duration": 26.154721,
-     "end_time": "2023-01-24T18:00:59.096452",
+     "duration": 14.674001,
+     "end_time": "2023-01-25T20:14:31.579108",
      "exception": false,
-     "start_time": "2023-01-24T18:00:32.941731",
+     "start_time": "2023-01-25T20:14:16.905107",
      "status": "completed"
     },
     "tags": []
@@ -231,7 +231,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-24 18:00:33,036 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/514422179\n"
+      "2023-01-25 20:14:16,968 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/514422179\n"
      ]
     },
     {
@@ -266,10 +266,10 @@
    "id": "bb211aeb",
    "metadata": {
     "papermill": {
-     "duration": 0.004036,
-     "end_time": "2023-01-24T18:00:59.104933",
+     "duration": 0.22241,
+     "end_time": "2023-01-25T20:14:31.807220",
      "exception": false,
-     "start_time": "2023-01-24T18:00:59.100897",
+     "start_time": "2023-01-25T20:14:31.584810",
      "status": "completed"
     },
     "tags": []
@@ -285,16 +285,16 @@
    "id": "7da6fa06",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T18:00:59.114486Z",
-     "iopub.status.busy": "2023-01-24T18:00:59.113812Z",
-     "iopub.status.idle": "2023-01-24T18:01:00.852056Z",
-     "shell.execute_reply": "2023-01-24T18:01:00.851485Z"
+     "iopub.execute_input": "2023-01-25T20:14:31.822656Z",
+     "iopub.status.busy": "2023-01-25T20:14:31.821405Z",
+     "iopub.status.idle": "2023-01-25T20:14:33.877124Z",
+     "shell.execute_reply": "2023-01-25T20:14:33.876280Z"
     },
     "papermill": {
-     "duration": 1.745176,
-     "end_time": "2023-01-24T18:01:00.854079",
+     "duration": 2.066139,
+     "end_time": "2023-01-25T20:14:33.879930",
      "exception": false,
-     "start_time": "2023-01-24T18:00:59.108903",
+     "start_time": "2023-01-25T20:14:31.813791",
      "status": "completed"
     },
     "tags": []
@@ -332,10 +332,10 @@
    "id": "09357f1b",
    "metadata": {
     "papermill": {
-     "duration": 0.006021,
-     "end_time": "2023-01-24T18:01:00.866248",
+     "duration": 0.007617,
+     "end_time": "2023-01-25T20:14:33.894960",
      "exception": false,
-     "start_time": "2023-01-24T18:01:00.860227",
+     "start_time": "2023-01-25T20:14:33.887343",
      "status": "completed"
     },
     "tags": []
@@ -350,16 +350,16 @@
    "id": "c40e2880",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T18:01:00.879107Z",
-     "iopub.status.busy": "2023-01-24T18:01:00.878593Z",
-     "iopub.status.idle": "2023-01-24T18:01:01.057324Z",
-     "shell.execute_reply": "2023-01-24T18:01:01.056654Z"
+     "iopub.execute_input": "2023-01-25T20:14:33.909862Z",
+     "iopub.status.busy": "2023-01-25T20:14:33.909536Z",
+     "iopub.status.idle": "2023-01-25T20:14:34.212856Z",
+     "shell.execute_reply": "2023-01-25T20:14:34.211950Z"
     },
     "papermill": {
-     "duration": 0.186939,
-     "end_time": "2023-01-24T18:01:01.058906",
+     "duration": 0.313452,
+     "end_time": "2023-01-25T20:14:34.214956",
      "exception": false,
-     "start_time": "2023-01-24T18:01:00.871967",
+     "start_time": "2023-01-25T20:14:33.901504",
      "status": "completed"
     },
     "tags": []
@@ -397,10 +397,10 @@
    "id": "fed7f6ce",
    "metadata": {
     "papermill": {
-     "duration": 0.006332,
-     "end_time": "2023-01-24T18:01:01.071684",
+     "duration": 0.007155,
+     "end_time": "2023-01-25T20:14:34.229737",
      "exception": false,
-     "start_time": "2023-01-24T18:01:01.065352",
+     "start_time": "2023-01-25T20:14:34.222582",
      "status": "completed"
     },
     "tags": []
@@ -416,16 +416,16 @@
    "id": "a0b0297a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T18:01:01.085198Z",
-     "iopub.status.busy": "2023-01-24T18:01:01.084505Z",
-     "iopub.status.idle": "2023-01-24T18:01:02.020067Z",
-     "shell.execute_reply": "2023-01-24T18:01:02.019465Z"
+     "iopub.execute_input": "2023-01-25T20:14:34.245979Z",
+     "iopub.status.busy": "2023-01-25T20:14:34.245435Z",
+     "iopub.status.idle": "2023-01-25T20:14:35.309321Z",
+     "shell.execute_reply": "2023-01-25T20:14:35.308297Z"
     },
     "papermill": {
-     "duration": 0.944489,
-     "end_time": "2023-01-24T18:01:02.022068",
+     "duration": 1.075657,
+     "end_time": "2023-01-25T20:14:35.312384",
      "exception": false,
-     "start_time": "2023-01-24T18:01:01.077579",
+     "start_time": "2023-01-25T20:14:34.236727",
      "status": "completed"
     },
     "tags": []
@@ -461,10 +461,10 @@
    "id": "cd9cdd9a",
    "metadata": {
     "papermill": {
-     "duration": 0.007419,
-     "end_time": "2023-01-24T18:01:02.037333",
+     "duration": 0.008939,
+     "end_time": "2023-01-25T20:14:35.330868",
      "exception": false,
-     "start_time": "2023-01-24T18:01:02.029914",
+     "start_time": "2023-01-25T20:14:35.321929",
      "status": "completed"
     },
     "tags": []
@@ -479,16 +479,16 @@
    "id": "7ffd1a18",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T18:01:02.053413Z",
-     "iopub.status.busy": "2023-01-24T18:01:02.052851Z",
-     "iopub.status.idle": "2023-01-24T18:01:02.431246Z",
-     "shell.execute_reply": "2023-01-24T18:01:02.430524Z"
+     "iopub.execute_input": "2023-01-25T20:14:35.349132Z",
+     "iopub.status.busy": "2023-01-25T20:14:35.348388Z",
+     "iopub.status.idle": "2023-01-25T20:14:36.011604Z",
+     "shell.execute_reply": "2023-01-25T20:14:36.010583Z"
     },
     "papermill": {
-     "duration": 0.388413,
-     "end_time": "2023-01-24T18:01:02.432986",
+     "duration": 0.675414,
+     "end_time": "2023-01-25T20:14:36.014087",
      "exception": false,
-     "start_time": "2023-01-24T18:01:02.044573",
+     "start_time": "2023-01-25T20:14:35.338673",
      "status": "completed"
     },
     "tags": []
@@ -523,10 +523,10 @@
    "id": "d64df66f",
    "metadata": {
     "papermill": {
-     "duration": 0.007827,
-     "end_time": "2023-01-24T18:01:02.448660",
+     "duration": 0.01091,
+     "end_time": "2023-01-25T20:14:36.035622",
      "exception": false,
-     "start_time": "2023-01-24T18:01:02.440833",
+     "start_time": "2023-01-25T20:14:36.024712",
      "status": "completed"
     },
     "tags": []
@@ -542,16 +542,16 @@
    "id": "045e1866",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T18:01:02.465180Z",
-     "iopub.status.busy": "2023-01-24T18:01:02.464480Z",
-     "iopub.status.idle": "2023-01-24T18:01:37.756227Z",
-     "shell.execute_reply": "2023-01-24T18:01:37.755660Z"
+     "iopub.execute_input": "2023-01-25T20:14:36.054364Z",
+     "iopub.status.busy": "2023-01-25T20:14:36.053541Z",
+     "iopub.status.idle": "2023-01-25T20:15:00.322041Z",
+     "shell.execute_reply": "2023-01-25T20:15:00.321036Z"
     },
     "papermill": {
-     "duration": 35.309237,
-     "end_time": "2023-01-24T18:01:37.765411",
+     "duration": 24.280945,
+     "end_time": "2023-01-25T20:15:00.324946",
      "exception": false,
-     "start_time": "2023-01-24T18:01:02.456174",
+     "start_time": "2023-01-25T20:14:36.044001",
      "status": "completed"
     },
     "tags": []
@@ -561,7 +561,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-24 18:01:02,551 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/516238128\n"
+      "2023-01-25 20:14:36,111 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/516238128\n"
      ]
     },
     {
@@ -596,10 +596,10 @@
    "id": "af3112c7",
    "metadata": {
     "papermill": {
-     "duration": 0.00787,
-     "end_time": "2023-01-24T18:01:37.781054",
+     "duration": 0.008361,
+     "end_time": "2023-01-25T20:15:00.342637",
      "exception": false,
-     "start_time": "2023-01-24T18:01:37.773184",
+     "start_time": "2023-01-25T20:15:00.334276",
      "status": "completed"
     },
     "tags": []
@@ -614,16 +614,16 @@
    "id": "86abe247",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T18:01:37.798283Z",
-     "iopub.status.busy": "2023-01-24T18:01:37.797533Z",
-     "iopub.status.idle": "2023-01-24T18:01:37.958522Z",
-     "shell.execute_reply": "2023-01-24T18:01:37.957806Z"
+     "iopub.execute_input": "2023-01-25T20:15:00.360825Z",
+     "iopub.status.busy": "2023-01-25T20:15:00.360266Z",
+     "iopub.status.idle": "2023-01-25T20:15:00.623433Z",
+     "shell.execute_reply": "2023-01-25T20:15:00.622377Z"
     },
     "papermill": {
-     "duration": 0.171667,
-     "end_time": "2023-01-24T18:01:37.960300",
+     "duration": 0.275235,
+     "end_time": "2023-01-25T20:15:00.626046",
      "exception": false,
-     "start_time": "2023-01-24T18:01:37.788633",
+     "start_time": "2023-01-25T20:15:00.350811",
      "status": "completed"
     },
     "tags": []
@@ -679,17 +679,17 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 93.648726,
-   "end_time": "2023-01-24T18:01:38.387148",
+   "duration": 63.778754,
+   "end_time": "2023-01-25T20:15:01.257499",
    "environment_variables": {},
    "exception": null,
    "input_path": "doc_template/examples_root/examples/nb/brain_observatory_stimuli.ipynb",
-   "output_path": "/tmp/tmpgocyjmah/scratch_nb.ipynb",
+   "output_path": "/tmp/tmpzvs2zp5z/scratch_nb.ipynb",
    "parameters": {
-    "output_dir": "/tmp/tmpgocyjmah",
+    "output_dir": "/tmp/tmpzvs2zp5z",
     "resources_dir": "/home/runner/work/AllenSDK/AllenSDK/allensdk/internal/notebooks/resources"
    },
-   "start_time": "2023-01-24T18:00:04.738422",
+   "start_time": "2023-01-25T20:13:57.478745",
    "version": "2.4.0"
   }
  },
