--- a/doc_template/examples_root/examples/nb/cell_specimen_mapping.ipynb
+++ b/doc_template/examples_root/examples/nb/cell_specimen_mapping.ipynb
@@ -5,10 +5,10 @@
    "id": "ab898518",
    "metadata": {
     "papermill": {
-     "duration": 0.00314,
-     "end_time": "2023-01-24T17:54:15.931140",
+     "duration": 0.003796,
+     "end_time": "2023-01-25T20:08:13.571250",
      "exception": false,
-     "start_time": "2023-01-24T17:54:15.928000",
+     "start_time": "2023-01-25T20:08:13.567454",
      "status": "completed"
     },
     "tags": []
@@ -25,10 +25,10 @@
    "id": "2457b067",
    "metadata": {
     "papermill": {
-     "duration": 0.001988,
-     "end_time": "2023-01-24T17:54:15.935503",
+     "duration": 0.002588,
+     "end_time": "2023-01-25T20:08:13.577068",
      "exception": false,
-     "start_time": "2023-01-24T17:54:15.933515",
+     "start_time": "2023-01-25T20:08:13.574480",
      "status": "completed"
     },
     "tags": []
@@ -44,16 +44,16 @@
    "id": "6c46abcb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T17:54:15.941033Z",
-     "iopub.status.busy": "2023-01-24T17:54:15.940572Z",
-     "iopub.status.idle": "2023-01-24T17:54:15.947880Z",
-     "shell.execute_reply": "2023-01-24T17:54:15.947239Z"
+     "iopub.execute_input": "2023-01-25T20:08:13.584981Z",
+     "iopub.status.busy": "2023-01-25T20:08:13.584097Z",
+     "iopub.status.idle": "2023-01-25T20:08:13.594388Z",
+     "shell.execute_reply": "2023-01-25T20:08:13.593347Z"
     },
     "papermill": {
-     "duration": 0.011836,
-     "end_time": "2023-01-24T17:54:15.949341",
+     "duration": 0.017005,
+     "end_time": "2023-01-25T20:08:13.596880",
      "exception": false,
-     "start_time": "2023-01-24T17:54:15.937505",
+     "start_time": "2023-01-25T20:08:13.579875",
      "status": "completed"
     },
     "tags": []
@@ -69,16 +69,16 @@
    "id": "6ac4bacf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T17:54:15.954706Z",
-     "iopub.status.busy": "2023-01-24T17:54:15.954158Z",
-     "iopub.status.idle": "2023-01-24T17:54:15.957228Z",
-     "shell.execute_reply": "2023-01-24T17:54:15.956611Z"
+     "iopub.execute_input": "2023-01-25T20:08:13.604420Z",
+     "iopub.status.busy": "2023-01-25T20:08:13.603697Z",
+     "iopub.status.idle": "2023-01-25T20:08:13.609711Z",
+     "shell.execute_reply": "2023-01-25T20:08:13.607754Z"
     },
     "papermill": {
-     "duration": 0.007186,
-     "end_time": "2023-01-24T17:54:15.958594",
+     "duration": 0.012035,
+     "end_time": "2023-01-25T20:08:13.611796",
      "exception": false,
-     "start_time": "2023-01-24T17:54:15.951408",
+     "start_time": "2023-01-25T20:08:13.599761",
      "status": "completed"
     },
     "tags": [
@@ -96,16 +96,16 @@
    "id": "2db02eeb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T17:54:15.973443Z",
-     "iopub.status.busy": "2023-01-24T17:54:15.972887Z",
-     "iopub.status.idle": "2023-01-24T17:54:18.069832Z",
-     "shell.execute_reply": "2023-01-24T17:54:18.068858Z"
+     "iopub.execute_input": "2023-01-25T20:08:13.632530Z",
+     "iopub.status.busy": "2023-01-25T20:08:13.631727Z",
+     "iopub.status.idle": "2023-01-25T20:08:16.468895Z",
+     "shell.execute_reply": "2023-01-25T20:08:16.467846Z"
     },
     "papermill": {
-     "duration": 2.101461,
-     "end_time": "2023-01-24T17:54:18.071565",
+     "duration": 2.843146,
+     "end_time": "2023-01-25T20:08:16.470922",
      "exception": false,
-     "start_time": "2023-01-24T17:54:15.970104",
+     "start_time": "2023-01-25T20:08:13.627776",
      "status": "completed"
     },
     "tags": []
@@ -115,7 +115,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-24 17:54:17,803 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/590985414\n"
+      "2023-01-25 20:08:16,190 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/590985414\n"
      ]
     },
     {
@@ -153,10 +153,10 @@
    "metadata": {
     "collapsed": true,
     "papermill": {
-     "duration": 0.002334,
-     "end_time": "2023-01-24T17:54:18.076451",
+     "duration": 0.002909,
+     "end_time": "2023-01-25T20:08:16.477128",
      "exception": false,
-     "start_time": "2023-01-24T17:54:18.074117",
+     "start_time": "2023-01-25T20:08:16.474219",
      "status": "completed"
     },
     "tags": []
@@ -172,16 +172,16 @@
    "id": "187b40f8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T17:54:18.082358Z",
-     "iopub.status.busy": "2023-01-24T17:54:18.081792Z",
-     "iopub.status.idle": "2023-01-24T17:54:18.094940Z",
-     "shell.execute_reply": "2023-01-24T17:54:18.094246Z"
+     "iopub.execute_input": "2023-01-25T20:08:16.488181Z",
+     "iopub.status.busy": "2023-01-25T20:08:16.487147Z",
+     "iopub.status.idle": "2023-01-25T20:08:16.508689Z",
+     "shell.execute_reply": "2023-01-25T20:08:16.506862Z"
     },
     "papermill": {
-     "duration": 0.017882,
-     "end_time": "2023-01-24T17:54:18.096528",
+     "duration": 0.03279,
+     "end_time": "2023-01-25T20:08:16.512644",
      "exception": false,
-     "start_time": "2023-01-24T17:54:18.078646",
+     "start_time": "2023-01-25T20:08:16.479854",
      "status": "completed"
     },
     "tags": []
@@ -257,16 +257,16 @@
    "id": "53a58933",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T17:54:18.102625Z",
-     "iopub.status.busy": "2023-01-24T17:54:18.102036Z",
-     "iopub.status.idle": "2023-01-24T18:00:03.793596Z",
-     "shell.execute_reply": "2023-01-24T18:00:03.792874Z"
+     "iopub.execute_input": "2023-01-25T20:08:16.524156Z",
+     "iopub.status.busy": "2023-01-25T20:08:16.523480Z",
+     "iopub.status.idle": "2023-01-25T20:13:55.391145Z",
+     "shell.execute_reply": "2023-01-25T20:13:55.389939Z"
     },
     "papermill": {
-     "duration": 345.706907,
-     "end_time": "2023-01-24T18:00:03.805845",
+     "duration": 339.267781,
+     "end_time": "2023-01-25T20:13:55.785969",
      "exception": false,
-     "start_time": "2023-01-24T17:54:18.098938",
+     "start_time": "2023-01-25T20:08:16.518188",
      "status": "completed"
     },
     "tags": []
@@ -276,8 +276,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-24 17:59:21,371 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/540997912\n",
-      "2023-01-24 17:59:50,383 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/540653508\n"
+      "2023-01-25 20:13:24,166 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/540997912\n",
+      "2023-01-25 20:13:43,081 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/540653508\n"
      ]
     },
     {
@@ -338,16 +338,16 @@
    "id": "1d72ff29",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-24T18:00:03.820151Z",
-     "iopub.status.busy": "2023-01-24T18:00:03.819897Z",
-     "iopub.status.idle": "2023-01-24T18:00:03.830795Z",
-     "shell.execute_reply": "2023-01-24T18:00:03.830267Z"
+     "iopub.execute_input": "2023-01-25T20:13:55.826931Z",
+     "iopub.status.busy": "2023-01-25T20:13:55.826543Z",
+     "iopub.status.idle": "2023-01-25T20:13:55.842956Z",
+     "shell.execute_reply": "2023-01-25T20:13:55.841991Z"
     },
     "papermill": {
-     "duration": 0.019819,
-     "end_time": "2023-01-24T18:00:03.832172",
+     "duration": 0.030215,
+     "end_time": "2023-01-25T20:13:55.844991",
      "exception": false,
-     "start_time": "2023-01-24T18:00:03.812353",
+     "start_time": "2023-01-25T20:13:55.814776",
      "status": "completed"
     },
     "tags": []
@@ -442,17 +442,17 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 349.29615,
-   "end_time": "2023-01-24T18:00:04.257831",
+   "duration": 344.244936,
+   "end_time": "2023-01-25T20:13:56.586853",
    "environment_variables": {},
    "exception": null,
    "input_path": "doc_template/examples_root/examples/nb/cell_specimen_mapping.ipynb",
-   "output_path": "/tmp/tmpha84a30o/scratch_nb.ipynb",
+   "output_path": "/tmp/tmpd6e0kv4r/scratch_nb.ipynb",
    "parameters": {
-    "output_dir": "/tmp/tmpha84a30o",
+    "output_dir": "/tmp/tmpd6e0kv4r",
     "resources_dir": "/home/runner/work/AllenSDK/AllenSDK/allensdk/internal/notebooks/resources"
    },
-   "start_time": "2023-01-24T17:54:14.961681",
+   "start_time": "2023-01-25T20:08:12.341917",
    "version": "2.4.0"
   }
  },
